--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body {
     margin: 0 auto;
     max-width: 1920px;
-    height: 2000px;
+    background-color: #1d1d1d;
 }
 
 .nav_fix {
@@ -66,44 +66,40 @@ body {
     font-family: '微軟正黑體';
 }
 
-
-.mobile_nav {
-    display: flex;
-    justify-content: space-between;
+.nav_close{
     width: 100%;
-}
-
-
-.mobile_nav_menu {
-    display: none;
-    margin-top: 30px;
-    color: white;
-
+    height: 100%;
 }
 
 
 .mobile_menu_item {
-    display: flex;
-    justify-content: center;
-    -webkit-writing-mode: vertical-lr;
-    /*字直式排*/
-    writing-mode: vertical-lr;
-    flex-direction: column;
-    flex-wrap: wrap;
     display: none;
-}
+    background-color: #1a2333;
+    position: fixed;
+    top: 52px;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 98;
 
+}
 
 .mobile_menu_item.show {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    -webkit-writing-mode: vertical-lr;
-    writing-mode: vertical-lr;
+    display: block;
+ 
+ }
+
+.list_style{
+    margin-left: auto;
+    margin-right: auto;
+     /*字直式排*/
+     -webkit-writing-mode: vertical-lr;
+     writing-mode: vertical-lr; 
     flex-direction: column;
     flex-wrap: wrap;
-
-}
+   
+    
+} 
 
 
 .mobile_menu_item a {
@@ -111,6 +107,7 @@ body {
     text-decoration: none;
     padding: 0 15px;
     display: block;
+   
 
 }
 
@@ -266,9 +263,6 @@ body {
     left: 700px;
 }
 
-.price_bg{
-    background-color: #1d1d1d;
-}
 
 .price_title{
     padding: 75px 0px 50px 0px;
@@ -296,6 +290,24 @@ body {
     padding: 30px 0px 75px 0px;
 }
 
+.locate_title{
+    padding: 75px 0px 50px 0px;
+}
+
+.locate_title h1 {
+    font-weight: bold;
+    font-family: '微軟正黑體';
+    color: rgb(185, 125, 51);
+    text-align: center;
+}
+
+.map{
+    width: 100%;
+    height: 250px;
+}
+
+
+
 .clearfix {
     clear: both;
 }
@@ -306,8 +318,6 @@ body {
     }
 
     .mobile_nav {
-        display: flex;
-        justify-content: space-between;
         display: none;
     }
 
@@ -316,13 +326,26 @@ body {
 
 @media screen and (max-width:702px) {
     
-    .navbar{
-        display: none;
+    .nav_fix {
+    display: none;
     }
+
     
+    .mobile_nav {
+        display: block;
+       position: fixed;
+        width: 100%;
+        background-color: #1a2333;
+        z-index: 99;
+    }
    
     .mobile_nav_menu {
-        display: block;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        padding-right: 30px;
+        color: #fff;
+        
     }
 
     .feature_title {
@@ -341,9 +364,6 @@ body {
 
     }
 
-    /* .mobile_box {
-        margin: 5% 0;
-    } */
 
     .videoWrapper {
         z-index: 1;
