--- a/style.css
+++ b/style.css
@@ -306,6 +306,55 @@ body {
     height: 250px;
 }
 
+.map_padding{
+    padding-bottom: 30px;
+}
+
+.min_store h3{
+    color: #ffffff;
+    padding-bottom: 20px;
+}
+
+.min_store p{
+    color: #ffffff;
+    padding-bottom: 5px;
+    margin: 0;
+}
+
+.map_attention{
+    color: #a9adb2;
+    font-weight: bold;
+    margin: 50px 0px 0px 15px;
+}
+
+.locate_padding{
+    padding-bottom: 100px;
+}
+
+.QA_box{
+    padding: 20px 0;
+}
+
+.QA_list p{
+    color: #fff;
+    font-weight: bold;
+}
+
+.QA_p_flex{
+    display: flex;
+    flex-direction:row;
+}
+
+.radio_btn{
+    padding-top: 40px;
+}
+
+.radio_text{
+    color: #fff;
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+}
 
 
 .clearfix {
