--- a/style.css
+++ b/style.css
@@ -414,11 +414,11 @@ body {
         display: none;
     }
 
-    .feature_content_height {
+    .content_height {
         padding: 150px 0px 30px 0px;
     }
 
-    .feature_card_padding{
+    .card_padding{
         padding-bottom: 30px; 
     }
 
