--- a/style.css
+++ b/style.css
@@ -310,6 +310,10 @@ body {
     padding-bottom: 100px;
 }
 
+.QA_padding{
+    padding-bottom: 30px;
+}
+
 .QA_box{
     padding: 20px 0;
 }
@@ -337,6 +341,38 @@ body {
 
 .radio_text_padding{
     padding-left: 10px;
+}
+
+.col_footer_paddig{
+    padding-top: 75px;
+}
+
+.footer_col_imgflex{
+    display: flex;
+    justify-content: flex-end;
+}
+
+.fb_style{
+    width: 50px;
+}
+
+.footer_title{
+    display: flex;
+    align-items: center;
+    padding-left: 15px;
+}
+
+.footer_title h4{
+color: #a9adb2;
+}
+
+.footer_copyright{
+    padding: 15px 0px ;
+    color: #a9adb2;
+}
+
+.footer_copyright p{
+    margin-bottom: 0px;
 }
 
 
@@ -396,6 +432,9 @@ body {
 
     }
 
+    .swiper_padding{
+        padding-top: 51px;
+    }
 
     .videoWrapper {
         z-index: 1;
@@ -460,6 +499,10 @@ body {
 
     .map_attention{
         margin-top: 25px;
+    }
+
+    .footer_col_imgflex{
+        display: none;
     }
 
 }
